2016-09-26  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>

	* gui/mainWindow.py: Created main window draft.
	(MainApp.__createInputs): Added some inputs to modify algorithm.
	TODO: Move the layout to grid

	* mainGui.py: Created main script to handle the GUI.
