@@ -1,3 +1,8 @@
+2016-09-27  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>
+
+	* gui/mainWindow.py (MainApp.__createInputs): Moved inputs from a
+	vertical box to a grid.
+
 2016-09-26  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>
 
 	* gui/mainWindow.py: Created main window draft.
